--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -5,6 +5,20 @@
     transform: translate(-50%, -50%);
 }
 
+#loading {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.46);
+    z-index: 100;
+}
+
+    #loading .centered {
+        color: white;
+        font-size: xx-large;
+    }
+
 .container {
     overflow: scroll;
     width: 75%;
