--- a/wwwroot/item.css
+++ b/wwwroot/item.css
@@ -1,4 +1,5 @@
 ﻿.item {
+    position: relative;
     font-family: Arial;
     display: inline-block;
     margin: 5px;
@@ -8,4 +9,15 @@
     border-radius: 10px;
     user-select: none;
     cursor: pointer;
+}
+
+.item-loading {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    z-index: 100;
+    background-color: rgba(255,255,255,0.5);
 }
