--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -1,31 +1,4 @@
-﻿.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-body {
-    background-color: #2F3C42;
-}
-
-.container {
-    overflow: scroll;
-    width: 75%;
-    height: 100%;
-    margin-top: 10px;
-    background-color: #2F3C42;
-    border-radius: 5px;
-    padding: 5px;
-    padding-top: 15px;
-    right: -25px;
-}
-
-::-webkit-scrollbar {
-    width: 0px;
-}
-
-.items-container {
+﻿.items-container {
     margin: 5px;
     border-radius: 5px;
 }
@@ -52,8 +25,6 @@ body {
 
 #addItemInput {
     width: 96%;
-    margin-left: 5px;
     font-size: large;
     margin-left: 1%;
-    margin-top: 10%;
 }
