--- a/wwwroot/components/nav-component.css
+++ b/wwwroot/components/nav-component.css
@@ -1,24 +1,27 @@
 ﻿nav {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
+    border-bottom: solid 3px white;
+    margin-bottom: 10px;
 }
 
+nav ul {
+    margin-bottom: 10px;
+}
     nav ul li {
         list-style: none;
         display: inline-block;
         margin-top: 15px;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #252f33;
     }
 
     nav a {
         font-weight: 700;
         margin: 0 5px;
-        color: #fff;
+        color: navajowhite;
         text-decoration: none;
         font-family: Arial;
     }
-
-        nav a:hover {
-            padding-bottom: 5px;
-            box-shadow: inset 0 -2px 0 0 #fff;
-        }
