--- a/wwwroot/site.css
+++ b/wwwroot/site.css
@@ -12,17 +12,14 @@ body.all-loaded {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 0;
 }
 
 .container, #main {
     overflow: scroll;
     width: 75%;
     height: 100%;
-    margin-top: 10%;
-    border-radius: 5px;
-    padding: 5px;
-    padding-top: 15px;
-    right: -25px;
+    padding-top: 25%;
 }
 
 ::-webkit-scrollbar {
